# Proxy-Lab

./: .gitignore  LICENSE  main2.rs  package-lock.json  package.json  split_pages.js  vite.config.js
.cargo/: config.toml
legacy/: README.md
src/: index.html  material-entry.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  local_proxy.rs  main.rs  mtr.rs  platform.rs  proxy.rs  types.rs  version.rs
src-tauri/src/commands/: config_cmd.rs  export.rs  mod.rs  monitor.rs  mtr_cmd.rs  ping.rs  proxy_cfg.rs  rules.rs  scan.rs  uwp.rs  validation.rs  version_cmd.rs  window.rs
src-tauri/src/service/: config.rs  mod.rs  monitor.rs  mtr.rs  ping.rs  proxy.rs  rules.rs  scan.rs  uwp.rs
src/assets/css/: base.css  components.css  dialog.css  icons.css  layout.css  loading.css  page-config.css  page-logs.css  page-monitor.css  page-scan.css  page-settings.css  page-test.css  tables.css  titlebar.css  variables.css  vars.css
src/assets/fonts/: fonts.css
src/assets/js/: api.js  app.js  click-effect.js  col-resize.js  dialog.js  i18n.js  main.js  navigation.js  snackbar.js  state.js  theme.js  titlebar.js  utils.js
src/assets/js/pages/: config.js  logs.js  monitor.js  pool.js  scan.js  settings.js  test.js
src/assets/lib/: material-color-utilities.js  material-web-bundle.js
src/public/assets/css/: page-config.css  page-logs.css  page-monitor.css  page-scan.css  (+2 more)
src/public/pages/: config.html  logs.html  monitor.html  scan.html  settings.html  test.html
