[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = ["tray-icon", "image"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
chrono     = "0.4"
tokio      = { version = "1", features = ["full"] }
sysinfo = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22.1"
regex = "1.12.3"
tauri-plugin-dialog = "2.0.0-rc"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[package]
name = "proxy-tester"
version = "1.0.0"
edition = "2024"

[profile.dev]
incremental = true
opt-level = 0
debug = true
split-debuginfo = "off"
panic = "unwind"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
